force-app/main/default/objects/Product_Extension__c/Product_Extension__c.object-meta.xml
<CustomObject>
    <description>Product Extension</description>
    <label>Product Extension</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Product Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>