force-app/main/default/objects/Product_Extension__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accepted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>