force-app/main/default/objects/Product_Extension__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Product Lookup</description>
    <label>Account ID</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Collaterals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>