force-app/main/default/objects/Product_Extension__c/fields/Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line1__c</fullName>
    <description>Address Line1 used in Collateral object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>