force-app/main/default/objects/Product_Extension__c/fields/Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line2__c</fullName>
    <description>Address Line2 used in collateral object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>