force-app/main/default/objects/Product_Extension__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City Used in Collateral object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>