force-app/main/default/objects/Product_Extension__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country used in Collateral Object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>