force-app/main/default/objects/Product_Extension__c/fields/Cross_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Cross_Reference_ID__c</fullName>
    <description>cross reference field for Insolvency account created for &quot;Requirement to send some of the invalid submission/warehouse items to a queue for sending to Insolvency&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cross Reference ID</inlineHelpText>
    <label>Cross Reference ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>