force-app/main/default/objects/Product_Extension__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <description>Dealer used in Collateral Object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>