force-app/main/default/objects/Product_Extension__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <description>Equipment Description used in collateral object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>