force-app/main/default/objects/Product_Extension__c/fields/Equipment_Location__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location__c</fullName>
    <description>Equipment Location used in Collateral Object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>