force-app/main/default/objects/Product_Extension__c/fields/Equipment_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Returned_Date__c</fullName>
    <description>Equipment Returned Date used in Collateral Object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Returned Date</label>
    <type>Date</type>
</CustomField>