force-app/main/default/objects/Product_Extension__c/fields/Equipment_S_N__c.field-meta.xml
<CustomField>
    <fullName>Equipment_S_N__c</fullName>
    <description>Equipment S/N used in Collateral object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment S/N</label>
    <length>50</length>
    <type>Text</type>
</CustomField>