force-app/main/default/objects/Product_Extension__c/fields/Equipment_Value__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Value__c</fullName>
    <description>Equipment Value used in Collateral Object</description>
    <label>Equipment Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>