force-app/main/default/objects/Product_Extension__c/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <description>Collateral Identification</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Collateral Identification</inlineHelpText>
    <label>Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>