force-app/main/default/objects/Product_Extension__c/fields/Insolvency_Comments__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Comments__c</fullName>
    <description>created for &quot;Requirement to send some of the invalid submission/warehouse items to a queue for sending to Insolvency&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cross Reference ID</inlineHelpText>
    <label>Insolvency Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>