force-app/main/default/objects/Product_Extension__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Collateral Model</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Collateral Model</inlineHelpText>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>