force-app/main/default/objects/Product_Extension__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>State used in Collateral object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Province</label>
    <length>25</length>
    <type>Text</type>
</CustomField>