force-app/main/default/objects/Product_Extension__c/fields/Repossession_Date__c.field-meta.xml
<CustomField>
    <fullName>Repossession_Date__c</fullName>
    <description>Reposession Date used in collateral object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Repossession Date</label>
    <type>Date</type>
</CustomField>