force-app/main/default/objects/Product_Extension__c/fields/Repossession_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Repossession_Proceeds__c</fullName>
    <description>Repossession/Return Proceeds</description>
    <inlineHelpText>Repossession/Return Proceeds</inlineHelpText>
    <label>Repossession Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>