force-app/main/default/objects/Product_Extension__c/fields/Security_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Security_Registration_Date__c</fullName>
    <description>Security Registration Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Security Registration Date</inlineHelpText>
    <label>Security Registration Date</label>
    <type>Date</type>
</CustomField>