force-app/main/default/objects/Product_Extension__c/fields/Security_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Security_Registration_Number__c</fullName>
    <description>Security Registration Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Security Registration Number</inlineHelpText>
    <label>Security Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>