force-app/main/default/objects/Product_Extension__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip Code used in Collateral Object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>